[tool.poetry]
name = "test-crypto-detection"
version = "0.1.0"
description = "Test project for CVE-2026-26007 detection"
authors = ["Test <test@test.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "45.0.4"
pyyaml = "5.3.1"
urllib3 = "1.26.5"       # CVE-2023-43804, CVE-2023-45803
requests = "2.25.1"      # Pulls in vulnerable deps 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
